--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
     position: relative;
-    background-image: url('../img/body_bg.png');
+    background: #0c739f url('../img/body_bg.png') repeat-x;
 }
 
 .container {
@@ -11,9 +11,9 @@ body {
 }
 
 .page {
-    margin: 0 auto;
     width: 1018px;
     height: 991px;
+    margin: 0 auto;
     background-image: url('../img/page_bg.png');
     z-index: 2;
 }
@@ -86,18 +86,50 @@ p {
 .countries {
     display: flex;
     justify-content: flex-end;
-    margin-top: 30px;
-    margin-right: 38px;
+    margin-top: 32px;
+    margin-right: 33px;
 }
 
 .countries a {
     width: 52px;
-    margin: 1px 3px 0 1px;
+    height: 45px;
+    margin: 0 4px 0 1px;
     color: #128aa7;
     font-family: Tahoma;
     font-size: 8pt;
     letter-spacing: -.5px;
     text-align: center;
+}
+
+.countries a p {
+    margin-top: 47px;
+    font-size: 9px;
+    letter-spacing: .5px;
+    text-decoration: underline;
+}
+
+.india {
+    background: url('../img/flags.png') no-repeat 5px 0;
+}
+
+.nepal {
+    background: url('../img/flags.png') no-repeat -51px 0;
+}
+
+.tibet {
+    background: url('../img/flags.png') no-repeat -109px 0;
+}
+
+.butan {
+    background: url('../img/flags.png') no-repeat -166px 0;
+}
+
+.sri-lanka {
+    background: url('../img/flags.png') no-repeat -223px 0;
+}
+
+.maldives {
+    background: url('../img/flags.png') no-repeat -279px 0;
 }
 
 .photo {
@@ -141,9 +173,17 @@ a {
     text-align: center;
 }
 
-.triangle {
-    padding-left: 3px;
-    font-size: 10px;
+.menu li {
+    position: relative;
+}
+
+.triangle::after {
+    position: absolute;
+    top: 12px;
+    margin-left: 5px;
+    border: 6px solid transparent;
+    border-top: 6px solid #fff;
+    content: '';
 }
 
 .submenu {
@@ -211,9 +251,9 @@ h2 {
 /*FOOTER*/
 
 footer {
+    width: 1280px;
     margin-top: 9px;
     margin-bottom: 10px;
-    width: 1280px;
     color: #fff;
     font-family: Tahoma, sans-serif;
     font-size: 9pt;
